# prunr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo-snapshot.json  live-snapshot.json  sample-report.json
src/prunr/: __init__.py  cli.py  client.py  collector.py  fixtures.py  models.py  seed.py  snapshot.py
src/prunr/analyzers/: __init__.py  compliance.py  cost.py  dead_index.py  duplicate.py  patterns.py  retention.py  shard.py  storage_hog.py  summary.py
src/prunr/report/: __init__.py  html_report.py  json_report.py  terminal.py
tests/: conftest.py  test_analyzers.py  test_html_report.py
